@@ -17,7 +17,7 @@ from slumber_examples.models import Order
 from slumber_examples.tests.views import ServiceTestsWithDirectory
 
 
-class TestSlumberMockClient(unittest2.TestCase):
+class TestSlumberMockClient(ServiceTestsWithDirectory, unittest2.TestCase):
     margarita = dict(pk=1, name='Margarita', for_sale=True)
 
 
@@ -34,14 +34,14 @@ class TestSlumberMockClient(unittest2.TestCase):
 
 
     @mock_client(
-        slumber__Pizza=[
+        pizzas__slumber__Pizza=[
            margarita,
             dict(pk=2, name='Four seasons', prices=[
                 dict(pk=2, amount=Decimal("13"))
             ]),
             dict(pk=3, name='Hawaiin', for_sale=False),
         ],
-        slumber__PizzaPrice= [
+        pizzas__slumber__PizzaPrice= [
             dict(pk=1,
                 pizza=margarita,
                 date='2010-01-01', amount=Decimal("14")),
@@ -49,18 +49,18 @@ class TestSlumberMockClient(unittest2.TestCase):
     def test_get_pizza(self):
         """Ensure that we can manage instances and data arrays properly.
         """
-        p1 = client.slumber.Pizza.get(pk=1)
+        p1 = client.pizzas.slumber.Pizza.get(pk=1)
         self.assertEquals(p1.pk, 1)
         self.assertEquals(getattr(p1, 'name', None), 'Margarita', p1.__dict__)
-        self.assertEquals(type(p1).__name__, "slumber/Pizza/")
+        self.assertEquals(type(p1).__name__, "slumber://pizzas/slumber/Pizza/data/1/")
 
-        p2 = client.slumber.Pizza.get(pk=2)
+        p2 = client.pizzas.slumber.Pizza.get(pk=2)
         self.assertEquals(p2.pk, 2)
         self.assertEquals(len(p2.prices), 1)
         self.assertTrue(hasattr(p2.prices[0], 'pk'), type(p2.prices[0]))
         self.assertEquals(p2.prices[0].amount, Decimal("13"))
 
-        pp1 = client.slumber.PizzaPrice.get(pk=1)
+        pp1 = client.pizzas.slumber.PizzaPrice.get(pk=1)
         self.assertEquals(pp1.pk, 1)
         self.assertEquals(pp1.pizza.name, 'Margarita')
 
@@ -70,12 +70,12 @@ class TestSlumberMockClient(unittest2.TestCase):
         with self.assertRaises(AssertionError):
             client.django.contrib.auth.User.get(pk=1)
 
-    @mock_client(app__Model=[
+    @mock_client(pizzas__app__Model=[
         dict(pk=1)
     ])
-    def test_aliase_writes_are_visible(self):
-        m1 = client.app.Model.get(pk=1)
-        m2 = client.app.Model.get(pk=1)
+    def test_alias_writes_are_visible(self):
+        m1 = client.pizzas.app.Model.get(pk=1)
+        m2 = client.pizzas.app.Model.get(pk=1)
         self.assertEqual(m1.pk, m2.pk)
         with self.assertRaises(AttributeError):
             m1.attr
@@ -89,12 +89,12 @@ class TestSlumberMockClient(unittest2.TestCase):
     def test_model_operation_url_is_correct(self):
         self.assertEqual(client.app.Model._operations['test-op'], 'slumber://app/Model/test-op/')
 
-    @mock_client(app__Model=[
+    @mock_client(pizzas__app__Model=[
         dict(pk=1)
     ])
     def test_instance_operation_url_is_correct(self):
-        model = client.app.Model.get(pk=1)
-        self.assertEqual(model._operations['test-op'], 'slumber://app/Model/test-op/')
+        model = client.pizzas.app.Model.get(pk=1)
+        self.assertEqual(model._operations['test-op'], 'slumber://pizzas/app/Model/test-op/')
 
 
 class TestSlumberMockUA(unittest2.TestCase):
@@ -203,6 +203,21 @@ class TestMockWithDatabase(ServiceTestsWithDirectory, django.test.TestCase):
         with mock.patch('slumber.connector.proxies.post', post):
             user = client.pizzas.django.contrib.auth.User.authenticate()
             self.assertEqual(user, User.objects.get(username='test-user-2'))
+
+    @mock_client(pizzas__django__contrib__auth__User=[{
+            'pk': 1, 'id': 1, 'username': 'test-user-1',
+                'is_active': True, 'is_staff': False, 'is_superuser': False,
+                'date_joined': date(2011, 05, 23),
+                'first_name': 'test1', 'last_name': 'user', 'email': 'test-user-1@example.com'
+        }, {
+            'pk': 2, 'id': 2, 'username': 'test-user-2',
+                'is_active': True, 'is_staff': False, 'is_superuser': False,
+                'date_joined': date(2011, 05, 23),
+                'first_name': 'test2', 'last_name': 'user', 'email': 'test-user-2@example.com'
+        }])
+    def test_instance_proxy_is_applied_using_mocked_get(self):
+        user = client.pizzas.django.contrib.auth.User.get(pk=2)
+        self.assertTrue(hasattr(user, 'has_perm'), type(user).__mro__)
 
 
 class TestViews(django.test.TestCase):
