@@ -1,3 +1,6 @@
+2012-06-07  Kirit Saelensminde  <kirit@felspar.com>
+ The mock client model method `get` now returns an instance proxy as it should (when it can). If there isn't enough information to build a proper instance URL then it will continue to return the mock instance directly.
+
 2012-06-05  Kirit Saelensminde  <kirit@felspar.com>
  Make sure that if a URL is used in a query directly it is properly converted to a Slumber URL as appropriate.
 
